@@ -48,9 +48,18 @@ dnl internationalization macros
 AM_GNU_GETTEXT_VERSION
 AM_GNU_GETTEXT([external])
 
+dnl Control default dictname
+AC_MSG_CHECKING(default dict filename)
+AC_ARG_WITH(default-dict,
+AC_HELP_STRING(--with-default-dict,[Specify default dict filename]),
+default_cracklib_dict=$withval,
+default_cracklib_dict='$(pkgdatadir)/pw_dict')
+AC_SUBST(DEFAULT_CRACKLIB_DICT, $default_cracklib_dict)
+AC_MSG_RESULT($default_cracklib_dict)
+
 dnl Check for python, unless we were told to not try to build a python module
 AC_ARG_WITH(python,
-AC_HELP_STRING(--without-python,[Build a python module (default auto)]),
+AC_HELP_STRING(--without-python,[Build a python module @<:@default=auto@:>@]),
 build_python=$withval,build_python=auto)
 if test "$build_python" != no ; then
    AM_PATH_PYTHON(,,
@@ -74,6 +83,9 @@ if test "$build_python" != no ; then
    fi
 fi
 AM_CONDITIONAL(BUILD_PYTHON,[test "$build_python" = "yes"])
+
+dnl Handle local dict compiling properly
+AC_SUBST(CROSS_COMPILING, $cross_compiling)
 
 AC_OUTPUT(util/Makefile lib/Makefile doc/Makefile python/Makefile Makefile \
 		po/Makefile.in m4/Makefile cracklib.spec)
