@@ -16,4 +16,4 @@ libcrack_la_SOURCES = 	fascist.c \
 #
 libcrack_la_LDFLAGS = -version-info 10:0:8
 
-AM_CPPFLAGS = -I. -I.. -I$(top_srcdir)/lib -DIN_CRACKLIB '-DDEFAULT_CRACKLIB_DICT="$(pkgdatadir)/pw_dict"'
+AM_CPPFLAGS = -I. -I.. -I$(top_srcdir)/lib -DIN_CRACKLIB '-DDEFAULT_CRACKLIB_DICT="$(DEFAULT_CRACKLIB_DICT)"'
